<resources>
    <string name="app_name">PhizLab</string>


    <string name="choose_city">choose city</string>
    <string name="show_additional_information">show additional information</string>
    <string name="navigation_drawer_open">string</string>
    <string name="navigation_drawer_close">string</string>
    <string name="android_studo_android_com">android.studio@android.com</string>
    <string name="share">share</string>
    <string name="settings">SETTINGS</string>
    <string name="t_e">true</string>
    <string name="android_studio">Android Studio</string>
    <string name="avatar">avatar</string>
    <string name="about_developers">about developers</string>
    <string name="feedback">feedback</string>
    <string name="options">options</string>
    <string name="action_settings">srttings</string>
    <string name="clear">clear</string>
    <string name="search">search</string>
    <string name="dialog_message">" show additional information"</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="refresh">refresh</string>
    <string name="apply">apply</string>
    <string name="city">city_input</string>
  
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
</resources>