<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/colorPrimary"
    android:divider="@drawable/ic_launcher_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/foto"
        android:layout_width="73dp"
        android:layout_height="61dp"
        android:contentDescription="@string/logo"
        android:paddingTop="8dp"
        android:visibility="visible"
        app:srcCompat="@drawable/logo"
        tools:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:text="@string/android_studio"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/andr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_studo_android_com" />
</LinearLayout>